# simbld-http

./: .gitignore  Cargo.toml  INSTALLATION.md  LICENSE  README.md  THE_COMPLETE_LIST_OF_OFFICIAL_AND_UNOFFICIAL_HTTP_CODES.md  rustfmt.toml
examples/: example_http_server.rs  example_token_middleware.rs  examples_usage.rs  full_usage.rs  handler_usage.rs  http_interceptor_usage.rs  middleware_advanced_usage.rs  middleware_full_usage.rs  middleware_simple_usage.rs  middleware_usage.rs  response_functions.rs  response_functions_usage.rs  usage.rs
src/: lib.rs
src/helpers/: auth_middleware.rs  from_u16_helper.rs  generate_response_macros.rs  generate_responses_functions.rs  get_description_field_helper.rs  get_str_helper.rs  http_code_helper.rs  http_interceptor_helper.rs  http_interceptor_helper2.rs  json_serializable.rs  mod.rs  ok_with_cookie_helper.rs  ok_with_headers_helper.rs  response_functions.rs  response_helpers.rs  response_helpers2.rs  response_macros.rs  response_middleware_helper.rs  response_middleware_helper2.rs  response_with_cookie_helper.rs  response_with_headers_helper.rs  three_fields_tuple_helper.rs  to_u16_helper.rs  tuple_traits.rs  two_fields_tuple_helper.rs  unified_middleware_helper.rs  unified_tuple_helper.rs
src/helpers/traits/: mod.rs
src/middleware/: mod.rs
src/mocks/: mock_responses.rs  mod.rs
src/responses/: actix_responder.rs  client.rs  codes.rs  crawler.rs  http_code.rs  informational.rs  local.rs  mod.rs  redirection.rs  server.rs  service.rs  success.rs  wrapper.rs
src/tests/: test_response_helpers.rs  test_responses.rs
src/traits/: get_code_trait.rs  get_description_trait.rs  into_http_code_trait.rs  mod.rs
src/utils/: json_formatter.rs  mod.rs  populate_metadata.rs  response_tuple.rs  test_helpers.rs
tests/: macro_test.rs  response_helpers_test.rs  responses_test.rs  status_codes_test.rs
