[package]
name = "simbld-http"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Simon Bullado <s_bullado51@hotmail.com>"]
repository = "https://github.com/simbld/simbld-http"
description = "A comprehensive HTTP response library for Rust."
exclude = ["tests/", "examples/", "*.bak"]
categories = ["web-programming", "development-tools", "network-programming"]
readme = "README.md"
keywords = [
  "http",
  "response",
  "status",
  "code",
  "headers",
  "body",
  "json",
  "library",
  "rust",
  "crawler",
  "client",
  "server",
  "information",
  "error",
  "success",
  "failure",
  "request",
  "local",
  "redirection",
  "webdav",
  "unofficial",
  "apache",
  "deprecated",
  "laravel",
  "spring",
  "twitter",
  "shopify",
  "microsoft",
  "arcgis",
  "iis",
  "nginx",
  "cpanel",
  "cloudflare",
  "qualys",
  "pantheon",
]

[lib]
name = "simbld_http"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
actix-web = "4.0"
strum = "0.26.3"
strum_macros = "0.26.4"
num_enum = "0.7.3"
futures-util = "0.3"
actix-service = "2.0"
