[package]
name = "simbld-http"
version = "0.4.1"
edition = "2021"
license = "MIT"
authors = ["Simon Bullado <s_bullado51@hotmail.com>"]
repository = "https://github.com/simbld/simbld-http"
description = "A comprehensive HTTP response library for Rust."
exclude = ["tests/", "examples/", "*.bak"]
categories = ["web-programming", "development-tools", "network-programming"]
readme = "README.md"
keywords = ["http", "response", "code", "library", "error"]

[lib]
name = "simbld_http"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.66"
actix-web = "4.9.0"
strum = "0.27.1"
strum_macros = { version = "0.26.4" }
futures-util = "0.3"
actix-service = "2.0"
serde_urlencoded = "0.7.1"
url = "2.1.0"
inflector = { version = "0.11", package = "Inflector" }
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4.8"
chrono = "0.4.39"
paste = "1.0.15"
lazy_static = "1.5.0"
thiserror = "2.0.11"
tokio = "1.42.0"
